<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_log_btn"
        style="@style/PlayerConsoleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/clear_log"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_btn"
            style="@style/PlayerConsoleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_method"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pause_btn"
            style="@style/PlayerConsoleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/pause_method"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/is_ready_btn"
            style="@style/PlayerConsoleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/isReady_method"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/is_playing_btn"
            style="@style/PlayerConsoleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/isPlaying_method"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/is_paused_btn"
            style="@style/PlayerConsoleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/isPaused_method"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/is_ended_btn"
            style="@style/PlayerConsoleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/isEnded_method"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/current_time_btn"
            style="@style/PlayerConsoleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_time_method"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/duration_btn"
            style="@style/PlayerConsoleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/duration_method"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/remaining_time_btn"
            style="@style/PlayerConsoleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/remaining_time_method"/>

    </LinearLayout>

    <TextView
        android:id="@+id/log_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:layout_margin="4dp"
        android:textSize="10sp" />

</LinearLayout>