<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/keyline_2">

    <ImageView
        android:id="@+id/main_brand_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_height"
        android:src="@drawable/bw_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/player_projectid_text_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_2"
        android:hint="@string/player_projectid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_brand_logo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/load_externalid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_2"
        app:layout_constraintEnd_toEndOf="@id/player_projectid_text_input"
        app:layout_constraintTop_toBottomOf="@id/player_projectid_text_input">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/load_externalid_btn"
            style="@style/LoadButton"
            app:layout_constraintEnd_toEndOf="@id/player_projectid_text_input"
            app:layout_constraintTop_toBottomOf="@id/player_projectid_text_input" />

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/player_externalid_text_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/keyline_1"
        android:hint="@string/player_externalid"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/load_externalid_layout"
        app:layout_constraintEnd_toStartOf="@id/load_externalid_layout"
        app:layout_constraintStart_toStartOf="@+id/player_projectid_text_input"
        app:layout_constraintTop_toTopOf="@id/load_externalid_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/load_podcastid_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_2"
        app:layout_constraintEnd_toEndOf="@id/load_externalid_layout"
        app:layout_constraintStart_toStartOf="@id/load_externalid_layout"
        app:layout_constraintTop_toBottomOf="@id/load_externalid_layout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/load_podcastid_btn"
            style="@style/LoadButton"
            android:layout_width="match_parent" />

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/player_podcastid_text_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/player_podcastid"
        app:layout_constraintBottom_toBottomOf="@id/load_podcastid_layout"
        app:layout_constraintEnd_toEndOf="@id/player_externalid_text_input"
        app:layout_constraintStart_toStartOf="@id/player_projectid_text_input"
        app:layout_constraintTop_toTopOf="@id/load_podcastid_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/load_articleurl_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_2"
        app:layout_constraintEnd_toEndOf="@id/load_externalid_layout"
        app:layout_constraintStart_toStartOf="@id/load_externalid_layout"
        app:layout_constraintTop_toBottomOf="@id/load_podcastid_layout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/load_articleurl_btn"
            style="@style/LoadButton"
            android:layout_width="match_parent" />

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/player_articleurl_text_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/player_articleurl"
        app:layout_constraintBottom_toBottomOf="@id/load_articleurl_layout"
        app:layout_constraintEnd_toEndOf="@id/player_externalid_text_input"
        app:layout_constraintStart_toStartOf="@id/player_projectid_text_input"
        app:layout_constraintTop_toTopOf="@id/load_articleurl_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/player_display_notification_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_2"
        android:checked="true"
        android:text="@string/player_display_notification"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/player_articleurl_text_input"
        app:layout_constraintTop_toBottomOf="@id/load_articleurl_layout" />

    <CheckBox
        android:id="@+id/player_use_skinned_player_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/use_customised_player"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/player_articleurl_text_input"
        app:layout_constraintTop_toBottomOf="@id/player_display_notification_btn" />

    <CheckBox
        android:id="@+id/player_display_ff_rewind_buttons_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/display_ff_rewind_buttons"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/player_articleurl_text_input"
        app:layout_constraintTop_toBottomOf="@id/player_use_skinned_player_btn" />

    <ProgressBar
        android:id="@+id/loading_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_display_ff_rewind_buttons_btn" />

    <TextView
        android:id="@+id/loading_progress_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/keyline_1"
        app:layout_constraintBottom_toBottomOf="@id/loading_progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/loading_progress_bar"
        app:layout_constraintTop_toTopOf="@id/loading_progress_bar"
        tools:text="Loading podcast" />

    <io.beyondwords.player.PlaybackControlView
        android:id="@+id/playback_control_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/keyline_1"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/lib_version_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lib_version_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>